[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.27.0", "hatch-fancy-pypi-readme"]

[project]
name = "dotslash"
dynamic = ["readme", "version"]
authors = [
  { name = "Ofek Lev", email = "oss@ofek.dev" },
]
description = "Command-line tool to facilitate fetching an executable, caching it, and then running it."
keywords = [
  "dotslash",
]
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://dotslash-cli.com"
Tracker = "https://github.com/facebook/dotslash/issues"
Source = "https://github.com/facebook/dotslash"

[tool.hatch.version]
source = "env"
variable = "DOTSLASH_VERSION"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
end-before = "## Building from source"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-at = "## License"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = "(?m)^- \\[Building from source.+$\\s+-"
replacement = "-"

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.cibuildwheel]
enable = ["pypy"]
test-command = "python -m dotslash -- cache-dir"
# Only build on one version of Python since all distributions of a given platform/arch pair are the same
build = "cp314-*"
# Disable wheel repair since it's not necessary
repair-wheel-command = ""

[tool.cibuildwheel.linux]
environment-pass = ["DOTSLASH_SOURCE", "DOTSLASH_VERSION"]
